--- a/public/index.css
+++ b/public/index.css
@@ -4,11 +4,23 @@
     box-sizing: border-box;
 }
 
-html, body {
+html, body, #root {
     min-height: 100%;
+    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+    height: calc(var(--vh, 1vh) * 100);
 }
 
 body {
     background: rgba(245,245,245,1);
     background: linear-gradient(90deg, rgba(240,240,240,1) 0%, rgba(245,245,245,1) 50%, rgba(240,240,240,1) 100%);
+}
+
+@media (min-width: 720px) {
+    footer {
+        position: fixed;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        z-index: 1030;
+    }  
 }
